Rounded inputs on mobile fix
Removed webkit appearance on inputs for mobile devices

--- a/src/styles/global/forms.scss
+++ b/src/styles/global/forms.scss
@@ -3,6 +3,17 @@
     - Selectors setup for you to style form elements how you want
     - Focus, error, and disabled states are set to be extended
 ==============================================================================*/
+input {
+  // prevent rounded corners on mobile devices
+  &[type="search"],
+  &[type="number"],
+  &[type="email"],
+  &[type="password"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
+}
+
 input,
 textarea,
 select {
